--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-coffee-jshint": "^0.2.0",
     "grunt-contrib-coffee": "^0.10.1",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "karma-coverage": "^0.2.1"
   }
 }
