--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "karma": "^0.12.1",
     "karma-jasmine": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.3",
     "grunt": "^0.4.4",
     "grunt-karma": "^0.8.2",
     "grunt-contrib-concat": "^0.3.0",
@@ -21,6 +20,7 @@
     "grunt-coffee-jshint": "^0.2.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-clean": "^0.5.0",
-    "karma-coverage": "^0.2.1"
+    "karma-coverage": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.1.2"
   }
 }
