Replaced coffee_jslint with coffeelint and activated it.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-uglify": "^0.4.0",
-    "grunt-coffee-jshint": "^0.2.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-clean": "^0.5.0",
     "karma-coverage": "^0.2.1",
-    "karma-phantomjs-launcher": "^0.1.2"
+    "karma-phantomjs-launcher": "^0.1.2",
+    "grunt-coffeelint": "0.0.8"
   }
 }
